<resources>
    <string name="app_name">Task Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="need_to_complete_in_days">need to complete in _______ days.</string>
    <string name="set_task_s_priority">Set Task\'s Priority</string>
    <string name="task_scheduling_for_date">Task Scheduling for date -</string>
    <string name="enter_the_description_for_the_task">Enter the Description for the task</string>
    <string name="enter_the_title_of_the_task">Enter the Title of the Task</string>
    <string name="select_task_s_pirority">Select Task\'s Pirority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add_task">Add Task</string>
    <string name="update_status">Update Status</string>
    <string name="change_status">Select Status</string>
    <string name="quick_suggestions">Quick Suggestions</string>
    <string name="cancel">Cancel</string>
    <string name="priority_based">Priority Based</string>
    <string name="select_filters">Select Filters</string>
    <string name="leave_empty_in_case_you_don_t_want_to_check_for_perticular_date">Select only From Date in Case you want to check for the particular date </string>
    <string name="apply_filters">Apply Filters</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="date_filter">Date Filter</string>
    <string name="task_scheduled_date">Task Scheduled Date</string>
    <string name="task_created_date">Task created Date</string>
    <string name="sort_in">Sort in</string>
    <string name="by_date">By Date</string>
    <string name="any">Any</string>
    <string name="accending_order">Accenting Order</string>
    <string name="decending_order">Descending Order</string>
    <string name="curreently_working">Currently Working On It</string>
    <string name="no_task_found">No Task Found</string>
    <string name="task_s_list">My Dashboard</string>
    <string name="which_task_s_you_want_to_download">Select which Task\'s you want to download</string>
    <string name="remove_filters">Remove Filters</string>
    <string name="task_managemnt">Hello there ✋</string>
</resources>