<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20sp">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/select_filters"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/priority_based"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <RadioGroup
        android:id="@+id/rdGrpPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

        <RadioButton
            android:id="@+id/priorityAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:checked="true"
            android:text="@string/any" />

        <RadioButton
            android:id="@+id/priorityLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/priorityMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"

            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/priorityHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"

            android:text="@string/high" />
    </RadioGroup>


    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/by_date"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGrpPriority" />

    <RadioGroup
        android:id="@+id/rdGrpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv3">

        <RadioButton
            android:id="@+id/rdCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/task_created_date" />

        <RadioButton
            android:id="@+id/rdScheduledDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/task_scheduled_date" />


    </RadioGroup>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/sort_in"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGrpDate" />

    <RadioGroup
        android:id="@+id/rdGrpSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv4">

        <RadioButton
            android:id="@+id/rdAccending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/accending_order" />

        <RadioButton
            android:id="@+id/rdDecending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/decending_order" />


    </RadioGroup>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/date_filter"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGrpSort" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:focusable="false"
        android:hint="@string/from_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/endDate"
        app:layout_constraintTop_toBottomOf="@+id/tv5" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:focusable="false"
        android:hint="@string/to_date"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/startDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv5" />


    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/leave_empty_in_case_you_don_t_want_to_check_for_perticular_date"
        android:textColor="@color/hintColor"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/apply_filters"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tv6" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:text="@string/remove_filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit" />
</androidx.constraintlayout.widget.ConstraintLayout>

