<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_the_title_of_the_task"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <com.ron.taskmanagement.utils.MyEditText
            android:id="@+id/descreption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_the_description_for_the_task"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxHeight="250dp"

            />

        <EditText
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:focusable="false"
            android:elevation="1dp"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/task_scheduling_for_date"

            />

        <EditText
            android:id="@+id/etPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusable="false"
            android:hint="@string/set_task_s_priority"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/need_to_complete_in_days"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/schedule_task" />

    </LinearLayout>

</ScrollView>