<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20sp">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/select_task_s_pirority"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priorityLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="20sp"
        android:background="@drawable/bg_un_selected_priority"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/low"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/priorityMedium"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/priorityMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="20sp"
        android:background="@drawable/bg_un_selected_priority"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/priorityLow"
        app:layout_constraintRight_toLeftOf="@+id/priorityHigh"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/priorityHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="20sp"
        android:background="@drawable/bg_un_selected_priority"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/high"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/priorityMedium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

</androidx.constraintlayout.widget.ConstraintLayout>

