<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Waking up Early" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/change_status"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <RadioGroup
                android:id="@+id/rdGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/tv1"
                app:layout_constraintLeft_toRightOf="@+id/tv1"
                app:layout_constraintTop_toTopOf="@+id/tv1">

                <RadioButton
                    android:id="@+id/rdPending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingHorizontal="10dp"
                    android:text="Pending" />

                <RadioButton
                    android:id="@+id/rdCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="Completed" />

            </RadioGroup>


            <EditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Enter the Status"
                app:layout_constraintTop_toBottomOf="@+id/rdGrp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/quick_suggestions"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2">

                <TextView
                    android:id="@+id/sugg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/bg_un_selected_priority"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:text="Currently Working On It" />

                <TextView
                    android:id="@+id/sugg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/bg_un_selected_priority"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:text="Yes it is completed on Time" />

                <TextView
                    android:id="@+id/sugg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/bg_un_selected_priority"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:text="Nope! Not Completed On Time" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/update_status"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/layout" />

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>